# video_upload

./: .env  .gitattributes  .gitignore  Dockerfile  Readme.md  docker-compose.yaml  entrypoint.sh  latest_code.cmd  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: mixins.py  models.py  serializer.py  tasks.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_todoitem.py
app/templates/: index.html
media/videos/: screen-capture.webm
video_upload/: Dockerfile  Readme.md  __init__.py  asgi.py  celery.py  db.sqlite3  docker-compose.yaml  latest_code.cmd  manage.py  requirements.txt  settings.py  test.py
video_upload/.github/workflows/: main.yml
video_upload/app/: admin.py  managers.py  models.py  urls.py  views.py
video_upload/app/migrations/: 0001_initial.py
video_upload/app/static/: base.css
video_upload/app/templates/: index.html  upload.html
video_upload/video_upload/: settings.py  urls.py  wsgi.py
