[tool.poetry]
name = "video-upload"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "video_upload"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
google-cloud-storage = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
